--- a/readme.adoc
+++ b/readme.adoc
@@ -4,7 +4,7 @@ Even if http://neo4j.org[Neo4j] is all about graphs, its graph query language ht
 As you probably know, JDBC is a common way to connect to a datastore, especially since there
 are a lot of tooling and connectors written around it in the Business Intelligence, Data Migration, and ETL world.
 
-The Neo4j JDBC driver works with Neo4j Server in version 1.9.x and 2.x and with embedded and in-memory databases.
+The Neo4j JDBC driver works with Neo4j Server in version 2.x and with embedded and in-memory databases.
 It allows you to (transactionally) execute parametrized Cypher statements against your Neo4j database to either create,
 query or update data.
 
@@ -42,25 +42,56 @@ curl http://neo4j-movies.herokuapp.com/graph
 Spring Boot is a rapid application development environment, bundling necessary Spring modules into easy-to-use `starter` packages.
 
 It is based on annotation-based Java config and pre-configuring the packages with sensible defaults.
-You can adapt them in a single `application.properties` config file.
 
 You add the dependency to the JDBC driver and Spring-Boot-Starters to your `pom.xml`:
 
 [source,xml]
 ----
-include::pom.xml[tags=dependencies]
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-jdbc</artifactId>
+	<version>${spring-boot.version}</version>
+</dependency>
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-web</artifactId>
+	<version>${spring-boot.version}</version>
+</dependency>
+<dependency>
+	<groupId>org.neo4j</groupId>
+	<artifactId>neo4j-jdbc</artifactId>
+	<version>2.3.2</version>
+</dependency>
 ----
 
 For the backend we use a Spring-WebMVC `@RestController` whose service methods access an autowired `JdbcTemplate`.
 
 Currently we get the `NEO4J_URL` from a system property, but it should be equally simple to get it from an entry in `application.properties`.
+If you configure a password with your Neo4j server please set the environment variable like this:
+
+[source]
+----
+export NEO4J_URL=jdbc:neo4j:http://localhost:7474?user=neo4j,password=<password>
+----
 
 Using the JDBC-template with Cypher is easy. 
 Here is an example from the `/movie` endpoint:
 
 [source,java]
 ----
-include::src/main/java/movies/spring/jdbc/SampleMovieApplication.java[tags=jdbctemplate]
+@Autowired
+JdbcTemplate template;
+
+String GET_MOVIE_QUERY =
+  "MATCH (movie:Movie {title:{1}})" +
+  " OPTIONAL MATCH (movie)<-[r]-(person:Person)\n" +
+  " RETURN movie.title as title, collect({name: person.name, " +
+  " job: head(split(lower(type(r)),'_')), role: r.roles}) as cast LIMIT 1";
+
+@RequestMapping("/movie/{title}")
+public Map<String,Object> movie(@PathVariable("title") String title) {
+    return template.queryForMap(GET_MOVIE_QUERY, title);
+}
 ----
 
 You would then set parameters on your statement.
@@ -71,6 +102,7 @@ You can use all known `JdbcTemplate` methods, like `queryForObjects`, `queryForM
 === Run locally:
 
 Start your local Neo4j Server (http://neo4j.com/download[Download & Install]), open the http://localhost:7474[Neo4j Browser].
+Set the initial password to log-in, please use the same password in the `NEO4J_URL` environment variable.
 Then install the Movies data-set with `:play movies`, click the statement, and hit the triangular "Run" button.
 
 Start this application with:
@@ -83,9 +115,3 @@ mvn spring-boot:run
 Go to http://localhost:8080
 
 You can search for movies by title and/or click on any entry.
-
-////
-=== Deploy to CloudFoundry
-
-include::/developer/Readme.adoc[tags=heroku]
-////
